<resources>
    <string name="app_name">BlissfulMoms</string>
    <string name="register_text">Login Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_age">Age</string>
    <string name="text_weight">Weight</string>
    <string name="text_duedate">Due Date</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="time_to_birth">Expecting a baby in : </string>
    <string name="appointment_desc">Appoinment Details </string>
    <string name="appointment_save">Save Appointment </string>
    <string name="sync_fitbit">Send Report !</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>
    <string name="welcome">Welcome!</string>
    <string name="login_dismissed">Login dismissed or no scopes selected</string>
    <string name="missing_scopes_error">Error logging in. Missing the following required scopes: </string>
    <string name="login_title">Login</string>
</resources>